<resources>
    <string name="app_name">Tarea 2 - Senku</string>
    <string name="title">Tarea 2\nSenku</string>
    <string name="credits">Autores: Joaquín León Ulloa\nCarlos Hernandez Sacaan</string>
    <string name="start">Comenzar</string>
    <string name="illegal">Wait, that\'s Illegal</string>
    <string name="cross">Cruz</string>
    <string name="flower">Flor</string>
    <string name="level_select">Seleccionar nivel</string>
    <string name="help">Ayuda</string>
    <string name="win">Ha Ganado!</string>
    <string name="lose">Ha perdido!</string>
    <string name="victory">Wow!Una gran victoria!</string>
    <!--string name="Reiniciar">Reiniciar</string-->
    <!-- strings creditos-->
    <string name="creditosTitulo">Creditos</string>
    <string name="creditosContenido1">Concepto Original por:</string>
    <string name="creditosContenido2">Programadores:</string>
    <string name="creditosNombres1">Mario Medina</string>
    <string name="creditosNombres2">Carlos Hernandez\nJoaquin Leon</string>
    <!-- strings ayuda -->
    <string name="ayudaTitulo">Como jugar</string>
    <string name="restart">Reiniciar</string>


</resources>