<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground"
    android:gravity="center"
    tools:context=".LevelSelector">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_select"
            android:textColor="@color/colorAccent"
            android:gravity="center_horizontal"
            android:layout_margin="10sp"
            android:textSize="48sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flower"
            android:layout_margin="20sp"
            android:background="@color/colorButton"
            android:textColor="@color/colorAccent"
            android:onClick="startLevel"
            android:textSize="48sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cross"
            android:layout_margin="20sp"
            android:background="@color/colorButton"
            android:textColor="@color/colorAccent"
            android:onClick="startLevel"
            android:textSize="48sp" />
    </LinearLayout>
</RelativeLayout>